8160141: removed deprecated method calls in nashorn code
Reviewed-by: mhaupt, hannesw