@@ -2854,8 +2854,7 @@ public final class Global extends Scope {
             sb.append("$Constructor");
 
             final Class<?> funcClass = Class.forName(sb.toString());
-            @SuppressWarnings("deprecation")
-            final T res = clazz.cast(funcClass.newInstance());
+            final T res = clazz.cast(funcClass.getDeclaredConstructor().newInstance());
 
             if (res instanceof ScriptFunction) {
                 // All global constructor prototypes are not-writable,
@@ -2871,8 +2870,12 @@ public final class Global extends Scope {
             res.setIsBuiltin();
 
             return res;
-        } catch (final ClassNotFoundException | InstantiationException | IllegalAccessException e) {
-            throw new RuntimeException(e);
+        } catch (final Exception e) {
+            if (e instanceof RuntimeException) {
+                throw (RuntimeException)e;
+            } else {
+                throw new RuntimeException(e);
+            }
         }
     }
 
@@ -2882,14 +2885,17 @@ public final class Global extends Scope {
             final String className = PACKAGE_PREFIX + name + "$Prototype";
 
             final Class<?> funcClass = Class.forName(className);
-            @SuppressWarnings("deprecation")
-            final ScriptObject res = (ScriptObject) funcClass.newInstance();
+            final ScriptObject res = (ScriptObject) funcClass.getDeclaredConstructor().newInstance();
 
             res.setIsBuiltin();
             res.setInitialProto(prototype);
             return res;
-        } catch (final ClassNotFoundException | InstantiationException | IllegalAccessException e) {
-            throw new RuntimeException(e);
+        } catch (final Exception e) {
+            if (e instanceof RuntimeException) {
+                throw (RuntimeException)e;
+            } else {
+                throw new RuntimeException(e);
+            }
         }
     }
 
